Implemented basic course eval link button functionality

--- a/tcf_website/templates/course/course.html
+++ b/tcf_website/templates/course/course.html
@@ -17,6 +17,8 @@
             <h1 class="mr-md-3">{{ course.code }}</h1>
             <h2>{{ course.title }}</h2>
         </div>
+        <button type="button" ><a href={{course.evalLink}}>Course Eval (Requires NetBadge login)</a></button>
+        
         <ul class="instructor-list">
         {% for i in recent_instructors %}
             <li class="instructor">
