Added unit test

--- a/tcf_website/templates/course/course.html
+++ b/tcf_website/templates/course/course.html
@@ -17,7 +17,7 @@
             <h1 class="mr-md-3">{{ course.code }}</h1>
             <h2>{{ course.title }}</h2>
         </div>
-        <button type="button" ><a href={{course.evalLink}}>Student Evaluations (Requires NetBadge login)</a></button>
+        <button type="button" ><a href={{course.eval_link}}>Student Evaluations (Requires NetBadge login)</a></button>
         
         <ul class="instructor-list">
         {% for i in recent_instructors %}
