Added javascript for sorting of courses

--- a/tcf_website/templates/department/department.html
+++ b/tcf_website/templates/department/department.html
@@ -34,4 +34,5 @@
 
 {% block js %}
 <script src="{% static 'common/show-hide.js' %}"></script>
+<script src="{% static 'department/sorting.js' %}"></script>
 {% endblock %}
