--- a/tcf_website/templates/common/toolbar.html
+++ b/tcf_website/templates/common/toolbar.html
@@ -7,6 +7,14 @@
             {% endfor %}
         </ol>
     </div>
+    {% if sorting %}
+    <div class="btn-group" role="group" aria-label="Basic example">
+        <button type="button" id="number-sort-btn" onclick="sort_by_number()" class="btn btn-outline-dark active">Number</button>
+        <button type="button" id="rating-sort-btn" onclick="sort_by_rating()" class="btn btn-outline-dark">Rating</button>
+        <button type="button" id="diff-sort-btn" onclick="sort_by_difficulty()" class="btn btn-outline-dark">Difficulty</button>
+        <button type="button" id="gpa-sort-btn" onclick="sort_by_gpa()" class="btn btn-outline-dark">GPA</button>
+    </div>
+    {% endif %}
     {% if active_text %}
     <div class="btn-group" role="group" aria-label="Basic example">
         <button type="button" id="hide-btn" onclick="hideOld()" class="btn btn-outline-dark active">{{ active_text }}</button>
