improved vertical spacing p2

--- a/tcf_website/templates/login/login.html
+++ b/tcf_website/templates/login/login.html
@@ -3,7 +3,7 @@
 
 {% block login_content %}
 
-<h2 class="card-title">Welcome to theCourseForum!</h2>
+<h2 class="card-title" style="margin-top: 15px;">Welcome to theCourseForum!</h2>
 <h5 class="card-text mb-3">Please log in to continue.</h5>
 {% if error %}
     <p style="color: red;" class="card-text">There was an error logging you in. Please make sure you're using an @virginia.edu email address.</p>
