--- a/tcf_website/templates/login/login_button.html
+++ b/tcf_website/templates/login/login_button.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="{% static 'login/login_button.css' %}" />
 {% endblock %}
 
-<div class="container" style="margin-top: 30px; margin-bottom: 30px;">
+<div class="container" style="margin-top: 30px;">
     <a href="{% url 'social:begin' 'google-oauth2' %}">
         <button class="login-button"></button>
     </a>
