--- a/tcf_website/templates/base/sidebar.html
+++ b/tcf_website/templates/base/sidebar.html
@@ -52,7 +52,7 @@ d-flex flex-column justify-content-between" id="sidebar-wrapper">
     <h6>theCourseForum &copy; {{ LATEST_SEMESTER.year }}</h6>
     <p>
         <span>
-            <a href="https://twitter.com/messages/compose?recipient_id=1959594170">Found a bug?</a>
+            <a href="https://twitter.com/messages/compose?recipient_id=1959594170" target="_blank">Found a bug?</a>
         </span>
         {% if DEBUG %}
         <span> | DEBUG Mode</span>
