Persists the search query in the search box after searching. (#94)
* Query now persists in search page

* Fixed bug where it was only taking first word

* autopep8 changed this

--- a/tcf_website/templates/base/navbar.html
+++ b/tcf_website/templates/base/navbar.html
@@ -14,7 +14,7 @@
       <form class="search d-inline-block mx-md-2 my-auto order-1" action="/search" method="get">
           <div class="input-group">
               <input type="search" class="form-control border border-right-0"
-                     placeholder="Search..." aria-label="Search" name="q">
+                     placeholder="Search..." aria-label="Search" name="q" value="{{query}}">
               <div class="input-group-append">
                   <button class="btn btn-outline-primary border border-left-0" type="submit">
                       <i class="fa fa-search" aria-hidden="true"></i>
