--- a/tcf_website/templates/login/login_button.html
+++ b/tcf_website/templates/login/login_button.html
@@ -4,8 +4,8 @@
 <link rel="stylesheet" href="{% static 'login/login_button.css' %}" />
 {% endblock %}
 
-<div class="container" style="margin-top: 30px;">
-    <a href="{% url 'social:begin' 'google-oauth2' %}">
+<div class="container" style="margin-top: 20px;">
+    <a class="login-button-wrapper" href="{% url 'social:begin' 'google-oauth2' %}">
         <button class="login-button"></button>
     </a>
 </div>
