Updated sorting JS

--- a/tcf_website/templates/common/toolbar.html
+++ b/tcf_website/templates/common/toolbar.html
@@ -9,10 +9,10 @@
     </div>
     {% if sorting %}
     <div class="btn-group" role="group" aria-label="Basic example">
-        <button type="button" id="number-sort-btn" onclick="sort_by_number()" class="btn btn-outline-dark active">Number</button>
-        <button type="button" id="rating-sort-btn" onclick="sort_by_rating()" class="btn btn-outline-dark">Rating</button>
-        <button type="button" id="diff-sort-btn" onclick="sort_by_difficulty()" class="btn btn-outline-dark">Difficulty</button>
-        <button type="button" id="gpa-sort-btn" onclick="sort_by_gpa()" class="btn btn-outline-dark">GPA</button>
+        <button type="button" id="number-sort-btn" onclick="sortByNumber()" class="btn btn-outline-dark active">Number</button>
+        <button type="button" id="rating-sort-btn" onclick="sortByRating()" class="btn btn-outline-dark">Rating</button>
+        <button type="button" id="diff-sort-btn" onclick="sortByDifficulty()" class="btn btn-outline-dark">Difficulty</button>
+        <button type="button" id="gpa-sort-btn" onclick="sortByGpa()" class="btn btn-outline-dark">GPA</button>
     </div>
     {% endif %}
     {% if active_text %}
