Perfect Login Button (#100)
* added css layer

* moved div style to css

* abstracted grid location + scaling

<a> tag now fits ALMOST perfectly to the <button> tag

* button almost perfectly fits <a> tag

button of <a> tag is slightly longer still (2-3 pixels)

* perfect fit :100:

by setting the <a> tag width and height to be the same as the <button> width and height, they fit perfectly

* cursor reflects action

--- a/tcf_website/templates/login/login_button.html
+++ b/tcf_website/templates/login/login_button.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="{% static 'login/login_button.css' %}" />
 {% endblock %}
 
-<div class="container" style="margin-top: 20px;">
+<div class="login-button-container">
     <a class="login-button-wrapper" href="{% url 'social:begin' 'google-oauth2' %}">
         <button class="login-button"></button>
     </a>
