--- a/tcf_website/templates/base/base.html
+++ b/tcf_website/templates/base/base.html
@@ -31,6 +31,7 @@
 
         {% include "base/navbar.html" %}
         <div class="content p-4 container-fluid text-center text-md-left h-100">
+            {% include "base/messages.html" %}
             <div class="row h-100">
             {% block content %}
             <p>Base content goes here.</p>
