added Django messages css
The actual css still needs to be improved though!

--- a/tcf_website/templates/base/base.html
+++ b/tcf_website/templates/base/base.html
@@ -17,6 +17,7 @@
     <!-- Custom styles for this template -->
     <link rel="stylesheet" href="{% static 'base/simple-sidebar.css'%}">
     <link rel="stylesheet" href="{% static 'base/base.css' %}" />
+    <link rel="stylesheet" href="{% static 'base/messages.css' %}" />
 
     {% block styles %}
     {% endblock %}
