working fade out animation

--- a/tcf_website/static/base/messages.css
+++ b/tcf_website/static/base/messages.css
@@ -7,9 +7,38 @@
 */
 
 .messages {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 20px;
 }
 
-.messages > li {
+.messages > .message {
+    position: relative;
+    width: fit-content;
     text-align: center;
+    background-color: #db4929;
+    color: white;
+    border-radius: 20px;
+    padding: 10px;
+    cursor: default;
+    visibility: visible;
+    -webkit-animation: fadeOut 2s;
+    -webkit-animation-delay: 4s;
+    -webkit-animation-iteration-count: 1;
+    -webkit-animation-fill-mode: forwards;
+    animation: fadeOut 2s;
+    animation-delay: 4s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+@-webkit-keyframes fadeOut {
+    from {opacity: 1; top: 0px} 
+    to   {opacity: 0; top: -20px;}
+}
+
+@keyframes fadeOut {
+    from {opacity: 1; top: 0px;}
+    to   {opacity: 0; top: -20px;}
 }
