--- a/tcf_website/static/base/messages.css
+++ b/tcf_website/static/base/messages.css
@@ -1,7 +1,8 @@
 /* 
-    Whenever we need to notify the user, we can create a
-    Django message which displays once in the form of a small
-    popup and disappears.
+    We can use the Django messages framework to notify the user
+    whenever something important happens. For example, successfully logging out!
+    This css is used to format and animate any new Django messages that are
+    triggered in the application.
 
     https://docs.djangoproject.com/en/3.0/ref/contrib/messages/
 */
