--- a/tcf_website/static/base/messages.css
+++ b/tcf_website/static/base/messages.css
@@ -11,19 +11,26 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 20px;
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
+    z-index: 9999;
+    height: 0px;
+    top: 70px;
 }
 
 .messages > .message {
     position: relative;
     width: fit-content;
     text-align: center;
-    background-color: #db4929;
     box-shadow: 3px 3px 1.5px rgb(23, 34, 72);
-    color: white;
+    background-color: #db4929;
     border-radius: 20px;
+    color: white;
     padding: 10px;
+    margin-top: 10px;
     cursor: default;
+
+    /* Animation */
     visibility: visible;
     opacity: 0;
     -webkit-animation: fadeIn 2s;
