--- a/tcf_website/templates/base/messages.html
+++ b/tcf_website/templates/base/messages.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% if messages %}
-    <div class="messages">
+    <div class="messages content">
         {% for message in messages %}
             <div class="message">{{ message }}</div>
         {% endfor %}
