--- a/tcf_website/static/base/base.css
+++ b/tcf_website/static/base/base.css
@@ -1,4 +1,4 @@
-/* 
+/*
 
 Responsive breakpoints:
 
@@ -26,6 +26,7 @@ html {
 }
 
 body {
+    font-family: 'Lato', sans-serif;
     padding-top: 70px; /* Height of fixed navbar */
     background-color: #EBEBEB;
     max-width: 100vw;
