--- a/tcf_website/templates/about/about.html
+++ b/tcf_website/templates/about/about.html
@@ -8,8 +8,13 @@
 {% block content %}
 <div class="browse container">
   <section class="about jumbotron bg-light">
-    <h2 class="display-4">theCourseForum</h2>
-    <h6 class="lead">connecting you to the courses you love.</h6>
+    <div class="d-flex flex-row">
+      <img src="{% static 'base/img/logo-orange-small.png' %}" width="100" height="100" alt="tCF">
+      <div class="ml-4">
+        <h2 class="display-4">theCourseForum</h2>
+        <h6 class="lead">connecting you to the courses you love.</h6>
+      </div>
+    </div>
     <hr/>
     <p><strong>theCourseForum</strong> is a product of developers and contributors from the UVA
     community. It's a place where students can share their academic experiences of
@@ -68,9 +73,14 @@
                 <div class="pfp">
                   <img class="card-img-top" src="{% static 'about/team-pfps/'|add:member.img_filename %}" alt="{{ member.name }}">
                 </div>
-                <div class="card-body">
-                  <h5 class="card-text">{{ member.name }}</h5>
-                  <p class="card-text">Class of {{ member.class }}</p>
+                <div class="card-body d-flex justify-content-between">
+                  <span>
+                    <h5 class="card-text">{{ member.name }}</h5>
+                    <p class="card-text">Class of {{ member.class }}</p>
+                  </span>
+                  <a class="text-secondary" href="https://github.com/{{ member.github }}">
+                    <h4><i class="fa fa-github"></i></h4>
+                  </a>
                 </div>
               </div>
             </div>
