--- a/tcf_website/templates/about/privacy.html
+++ b/tcf_website/templates/about/privacy.html
@@ -19,6 +19,8 @@
       "Website").</p>
     <p>By using or accessing theCourseForum, you are accepting the
      practices described in this Privacy Policy.</p>
+    <p>Disclaimer: Although this organization has members who are University of Virginia students and may have University employees associated or engaged in its activities and affairs, the organization is not a part of or an agency of the University. It is a separate and independent organization, which is responsible for and manages its own activities and affairs. The University does not direct, supervise or control the organization and is not responsible for the organization’s contracts, acts or omissions.
+    </p>
     <br/>
     <h4>The Information We Collect</h4>
     <p>When you visit theCourseForum you provide us with two types of
@@ -69,7 +71,7 @@
       <li>We may be required to disclose user information pursuant to lawful requests, such as subpoenas or court orders, or in compliance with applicable laws. We do not reveal information until we have a good faith belief that an information request by law enforcement or private litigants meets applicable legal standards. Additionally, we may share account or other information when we believe it is necessary to comply with law, to protect our interests or property, to prevent fraud or other illegal activity perpetrated through theCourseForum service or using the theCourseForum name, or to prevent imminent bodily harm. This may include sharing information with other companies, lawyers, agents or government agencies. We may offer stores or provide services jointly with other companies on theCourseForum. You can tell when another company is involved in any store or service provided on theCourseForum, and we may share customer information with that company in connection with your use of that store or service.</li>
       <li>If the ownership of all or substantially all of the theCourseForum business, or individual business units owned by theCourseForum, were to change, your user information may be transferred to the new owner so the service can continue operations. In any such transfer of information, your user information would remain subject to the promises made in any pre-existing Privacy Policy.</li>
     </ul>
-    
+
     <h4>Links</h4>
     <p>theCourseForum may contain links to other websites. We are of course not responsible for the privacy practices of other web sites. We encourage our users to be aware when they leave our site to read the privacy statements of each and every web site that collects personally identifiable information. This Privacy Policy applies solely to information collected by theCourseForum.</p>
 
