--- a/tcf_website/templates/about/history.html
+++ b/tcf_website/templates/about/history.html
@@ -1,36 +1,37 @@
-{% extends "base/base.html" %}
+{% extends "about/about.html" %}
 {% load static %}
 
-{% block styles %}
-{% endblock %}
+{% block subcontent %}
+<section class="jumbotron bg-light py-5 text-center">
+  <h1>History</h1>
+  <hr/>
+  <div class="row text-left">
+    <h4>Beginnings</h4>
+    <p>
+        In Fall 2005, UVa students Jeff Bordogna and Alan Webb recognized a need for an online community to help students share their class experiences, and thus developed the first version of theCourseForum. Over time, this simple tool grew and prospered as more and more students found it despite our extraordinarily small marketing budget. The site has now become a fixture of the UVA course signup season to the extent that over 80% of students use the site every year.
+    </p>
+    <h4>tCF 1.0</h4>
+    <p>
+        In 2012-2013, a team of 6 student developers led by Justin Dao redesigned the site to bring it into the modern age using the Ruby on Rails framework.
+    </p>
+    <h4>tCF 2.0</h4>
+    <p>
+        In 2020, a new team of students led by Brian Yu overhauled the 2012 Rails website and rewrote a python version using the Django framework to increase maintainability. After a few months of work, the new site was released, and it continues to be managed by UVa students.
+    </p>
+  </div>
+</section>
 
-{% block content %}
-<div class="browse container">
-    <h2>theCourseForum</h2>
-    <h6>connecting you to the courses you love.</h6>
-    <img class="container-fluid" src="{% static 'about/banner_uva.jpg' %}"/>
-    <div class="row mt-3">
-        <div class="col">
-            <h5>Beginnings</h5>
-            <p>
-                In Fall 2005, UVa students Jeff Bordogna and Alan Webb recognized a need for an online community to help students share their class experiences, and thus developed the first version of theCourseForum. Over time, this simple tool grew and prospered as more and more students found it despite our extraordinarily small marketing budget. The site has now become a fixture of the UVA course signup season to the extent that over 80% of students use the site every year. Starting in 2012, a small elite team of skilled individuals worked to redesign the site to bring it into the modern age. After a long year of work, the new site was released, and it continues to be managed by UVa students.
-            </p>
-            <p>
-                Although this organization has members who are University of Virginia students and may have University employees associated or engaged in its activities and affairs, the organization is not a part of or an agency of the University. It is a separate and independent organization, which is responsible for and manages its own activities and affairs. The University does not direct, supervise or control the organization and is not responsible for the organization’s contracts, acts or omissions.
-            </p>
-        </div>
-        <div class="col">
-            <img src="{% static 'about/parents_fund.png' %}"/>
-            <h5>
-                Thanks to the UVA Parents Fund!
-            </h5>
-            <p>
-                The UVA Parents Fund helps us cover server costs from the large amount of traffic that we get. Their help has allowed the site to stay up and running continuously as we keep developing new features.
-            </p>
-        </div>
+<section class="jumbotron bg-light py-5 text-center">
+  <h1>Thanks to our sponsors</h1>
+  <hr/>
+  <div class="row text-left">
+    <p>
+        Our sponsors help us cover server costs from the large amount of traffic that we get. Their help has allowed the site to stay up and running continuously as we keep developing new features.
+    </p>
+    <div class="d-flex justify-content-center">
+      <img src="{% static 'about/parents_fund.png' %}"/>
     </div>
-</div>
-
-
+  </div>
+</section>
 
 {% endblock %}
