--- a/tcf_website/templates/search/search.html
+++ b/tcf_website/templates/search/search.html
@@ -17,7 +17,7 @@
     {% if courses_error %}
     <div class="container">
         <h4>Searching courses is down right now!</h4>
-        <p>{{courses_error}}</p>
+        <li>{{courses_error}}</li>
     </div>
     {% endif %}
 
@@ -37,7 +37,7 @@
     {% if instructors_error %}
     <div class="container">
         <h4>Searching professors is down right now!</h4>
-        <p>{{instructors_error}}</p>
+        <li>{{instructors_error}}</li>
     </div>
     {% endif %}
 
