--- a/tcf_website/templates/base/navbar.html
+++ b/tcf_website/templates/base/navbar.html
@@ -5,15 +5,12 @@
 {% endblock %}
 
 <header>
-<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top p-3">
-    <!-- Main logo, search bar, collapse nav items -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <!-- tCF logo -->
+    <a class="navbar-brand tCF" href="/">
+      <img class="logo" src="{% static 'base/img/new_logo.png' %}">
+    </a>
     <div class="d-flex flex-grow-1 logo-search">
-      <a class="navbar-brand logo" href="/">
-          <img src="{% static 'base/img/logo-orange-small.png' %}" width="30" height="30" alt="tCF">
-      </a>
-      <div class="navbar-collapse collapse">
-      <a class="navbar-brand" href="/">theCourseForum</a>
-      </div>
         <!-- search not in navbar collapse -->
       <form class="search d-inline-block mx-md-2 my-auto order-1" action="/search" method="get">
           <div class="input-group">
