--- a/tcf_website/templates/course/course_professor.html
+++ b/tcf_website/templates/course/course_professor.html
@@ -56,10 +56,10 @@
     <div class="dropdown">
       <button id="review-sort-select" class="btn btn-secondary dropdown-toggle" type="button" id="sortOptions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
       <div class="dropdown-menu" aria-labelledby="sortOptions">
-        <button id="votes-sort-btn" onclick="sort_by_votes()" class="dropdown-item" type="button">Most Helpful</button>
-        <button id="recent-sort-btn" onclick="sort_by_recent()" class="dropdown-item" type="button">Most Recent</button>
-        <button id="highrating-sort-btn" onclick="sort_by_highrating()"class="dropdown-item" type="button">Highest Rating</button>
-        <button id="lowrating-sort-btn" onclick="sort_by_lowrating()"class="dropdown-item" type="button">Lowest Rating</button>
+        <button id="votes-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item" type="button">Most Helpful</button>
+        <button id="recent-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item" type="button">Most Recent</button>
+        <button id="highrating-sort-btn" onclick="sortReviews(this.id)"class="dropdown-item" type="button">Highest Rating</button>
+        <button id="lowrating-sort-btn" onclick="sortReviews(this.id)"class="dropdown-item" type="button">Lowest Rating</button>
       </div>
     </div>
 
@@ -71,4 +71,5 @@
 {% block js %}
 <script src="{% static 'reviews/review.js' %}"></script>
 <script src="{% static 'reviews/sort_reviews.js' %}"></script>
+<script src="{% static 'common/sorting.js' %}"></script>
 {% endblock %}
