symmetrical background-color
There is now even spacing on the left and right of the background-color hitbox

--- a/tcf_website/static/base/navbar.css
+++ b/tcf_website/static/base/navbar.css
@@ -29,7 +29,7 @@
 
 @media (min-width: 768px) {
     .tCF {
-        width: calc(240px - 16px);
+        width: calc(240px - 16px - 16px);
         height: calc(70px - 8px - 8px);
         padding: 0px;
         margin: 0px 16px 0px 0px;
