--- a/tcf_website/templates/base/navbar.html
+++ b/tcf_website/templates/base/navbar.html
@@ -22,9 +22,8 @@
         </div>
       </div>
     </form>
-
-    <button class="navbar-toggler d-md-none order-0 ml-sm-4" type="button" id="menu-toggle"
-      aria-controls="wrapper" aria-expanded="false" aria-label="Toggle sidebar">
+    <!-- tCF navbar toggler -->
+    <button class="navbar-toggler menu" id="menu-toggle">
       <span class="navbar-toggler-icon"></span>
     </button>
 
