--- a/tcf_website/templates/about/contributors.html
+++ b/tcf_website/templates/about/contributors.html
@@ -2,12 +2,60 @@
 {% load static %}
 
 {% block subcontent %}
-<section class="about jumbotron bg-light pb-5 text-center">
-  <h1>Founders & Alumni</h1>
-  <hr/>
-  <div class="row">
-    <h4>Coming Soon!</h4>
-  </div>
-</section>
+  <div id="team-members" class="team text-center">
+    <h1 class="my-5">Founders & Alumni</h1>
 
+    <div class="jumbotron py-5 bg-light">
+      <div class="container">
+        <h3>Founders</h3>
+        <hr/>
+        <div class="row">
+          <div class="col-lg-2"></div>
+          {% for member in founders %}
+            <div class="col-lg-4 col-sm-6 d-flex">
+              <div class="member card mb-4 shadow-sm flex-fill">
+                <div class="pfp">
+                  <img class="card-img-top" src="{% static 'about/alum-pfps/'|add:member.img_filename %}" alt="{{ member.name }}">
+                </div>
+                <div class="card-body">
+                  <h4 class="card-text">
+                    {{ member.name }}<br/>
+                    <small class="text-muted">{{ member.role }}</small>
+                  </h4>
+                  <p class="card-text">Class of {{ member.class }}</p>
+                </div>
+              </div>
+            </div>
+          {% endfor %}
+        </div>
+      </div>
+    </div>
+
+    {% for group in contributors %}
+    <div class="jumbotron py-5 bg-light">
+      <div class="container">
+        <h3>{{ group.group_name }}</h3>
+        <hr/>
+        <div class="row">
+          {% for member in group.members %}
+            <div class="col-lg-2 col-sm-6 d-flex">
+              <div class="member card mb-4 shadow-sm flex-fill">
+                <div class="pfp">
+                  <img class="card-img-top" src="{% static 'about/alum-pfps/'|add:member.img_filename %}" alt="{{ member.name }}">
+                </div>
+                <div class="card-body">
+                  <h6 class="card-text">
+                    {{ member.name }}<br/>
+                    <small class="text-muted">{{ member.role }}</small>
+                  </h6>
+                </div>
+              </div>
+            </div>
+          {% endfor %}
+        </div>
+      </div>
+    </div>
+    {% endfor %}
+
+  </div>
 {% endblock %}
