--- a/tcf_website/templates/about/history.html
+++ b/tcf_website/templates/about/history.html
@@ -2,22 +2,27 @@
 {% load static %}
 
 {% block subcontent %}
-<section class="jumbotron bg-light py-5 text-center">
+<section class="jumbotron bg-light py-5 text-center banner-img">
   <h1>History</h1>
   <hr/>
   <div class="row text-left">
-    <h4>Beginnings</h4>
-    <p>
-        In Fall 2005, UVa students Jeff Bordogna and Alan Webb recognized a need for an online community to help students share their class experiences, and thus developed the first version of theCourseForum. Over time, this simple tool grew and prospered as more and more students found it despite our extraordinarily small marketing budget. The site has now become a fixture of the UVA course signup season to the extent that over 80% of students use the site every year.
-    </p>
-    <h4>tCF 1.0</h4>
-    <p>
-        In 2012-2013, a team of 6 student developers led by Justin Dao redesigned the site to bring it into the modern age using the Ruby on Rails framework.
-    </p>
-    <h4>tCF 2.0</h4>
-    <p>
-        In 2020, a new team of students led by Brian Yu overhauled the 2012 Rails website and rewrote a python version using the Django framework to increase maintainability. After a few months of work, the new site was released, and it continues to be managed by UVa students.
-    </p>
+    <div class="col-lg-4 history-img">
+      <img src="{% static 'about/2014-team.jpeg' %}"/>
+    </div>
+    <div class="col-lg-8 pl-4">
+      <h4>Beginnings</h4>
+      <p>
+          In Fall 2005, UVa students Jeff Bordogna and Alan Webb recognized a need for an online community to help students share their class experiences, and thus developed the first version of theCourseForum. Over time, this simple tool grew and prospered as more and more students found it despite our extraordinarily small marketing budget. The site has now become a fixture of the UVA course signup season to the extent that over 80% of students use the site every year.
+      </p>
+      <h4>tCF 1.0</h4>
+      <p>
+          In 2012-2013, a team of 6 student developers led by Justin Dao redesigned the site to bring it into the modern age using the Ruby on Rails framework.
+      </p>
+      <h4>tCF 2.0</h4>
+      <p>
+          In 2020, Brian Yu led a new team of students to rewrite tCF in the python Django framework to increase maintainability. After a few months of work, the new site was released, and it continues to be managed by UVa students.
+      </p>
+    </div>
   </div>
 </section>
 
@@ -28,9 +33,9 @@
     <p>
         Our sponsors help us cover server costs from the large amount of traffic that we get. Their help has allowed the site to stay up and running continuously as we keep developing new features.
     </p>
-    <div class="d-flex justify-content-center">
-      <img src="{% static 'about/parents_fund.png' %}"/>
-    </div>
+  </div>
+  <div class="d-flex justify-content-center">
+    <img src="{% static 'about/parents_fund.png' %}"/>
   </div>
 </section>
 
