--- a/tcf_website/templates/base/navbar.html
+++ b/tcf_website/templates/base/navbar.html
@@ -13,6 +13,7 @@
     <!-- tCF search -->
     <form class="form-inline flex-grow-1" action="/search" method="get">
       <div class="input-group flex-grow-1">
+        <!-- TODO plz refactor me -->
         <input type="search" class="form-control border border-right-0"
                 placeholder="Search..." aria-label="Search" name="q" value="{{query}}">
         <div class="input-group-append">
@@ -27,28 +28,25 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="account d-none d-sm-inline-block ml-4 flex-shrink-1 flex-grow-0 order-last"
-         id="navbarSupportedContent">
-       <ul class="navbar-nav flex-shrink-1 flex-grow-0 order-last">
-           {% if user.is_authenticated %}
-           <!-- KEEP IN SYNC WITH sidebar.html -->
-           <li class="nav-item dropdown">
-               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                   Hi, {{user.first_name}}
-               </a>
-               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                 <a class="dropdown-item" href="{% url 'profile' %}">Profile</a>
-                 <a class="dropdown-item" href="{% url 'reviews' %}">My reviews</a>
-                 <div class="dropdown-divider"></div>
-                 <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
-               </div>
-           </li>
-           {% else %}
-           <li class="nav-item">
-               <a class="nav-link" href="{% url 'login' %}">Sign In</a>
-           </li>
-           {% endif %}
-       </ul>
+    <!-- tCF profile dropdown -->
+    <div class="account-settings">
+      {% if user.is_authenticated %}
+      <div class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown">
+          Hey {{user.first_name}}!
+        </a>
+        <div class="dropdown-menu settings" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="{% url 'profile' %}">My Profile</a>
+          <a class="dropdown-item" href="{% url 'reviews' %}">My Reviews</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+        </div>
+      </div>
+      {% else %}
+      <div class="nav-item">
+        <a class="nav-link" href="{% url 'login' %}">Sign In</a>
+      </div>
+    {% endif %}
     </div>
   </nav>
 </header>
