--- a/tcf_website/templates/about/history.html
+++ b/tcf_website/templates/about/history.html
@@ -34,8 +34,9 @@
         Our sponsors help us cover server costs from the large amount of traffic that we get. Their help has allowed the site to stay up and running continuously as we keep developing new features.
     </p>
   </div>
-  <div class="d-flex justify-content-center">
+  <div class="d-flex justify-content-around">
     <img src="{% static 'about/parents_fund.png' %}"/>
+    <img src="{% static 'about/StudCo_Logo.png' %}"/>
   </div>
 </section>
 
